# Solfund

./: README.md
anchor_project/: Anchor.toml
anchor_project/programs/bidlock/: Cargo.toml
anchor_project/programs/bidlock/src/: lib.rs
anchor_project/programs/solfund/src/: lib.rs
anchor_project/tests/: bidlock.ts
frontend/: README.md  package.json  tailwind.config.js
frontend/src/components/: AppBar.tsx  Footer.tsx  campaign-card.tsx  campaign-details.tsx  campaign-list.tsx  contribution-form.tsx  leaderboard.tsx  manage-campaign.tsx  milestone-manager.tsx  remove-contribution-form.tsx  rich-text-editor.tsx  share-button.tsx
frontend/src/contexts/: ContextProvider.tsx
frontend/src/hooks/: useQueryContext.tsx  useSolfund.ts
frontend/src/hooks/mutations/: newCampaign.tsx  solfund.tsx
frontend/src/hooks/queries/: solFund.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/campaign/: [id].tsx
frontend/src/pages/create-campaign/: index.tsx
frontend/src/pages/create-campaign.tsx/: index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: campaign.ts  solfund.json  solfund.ts
frontend/src/utils/: conversion.ts
solfund/: README.md
solfund/programs/solfund/: Cargo.toml
solfund/programs/solfund/src/: error.rs  lib.rs
solfund/programs/solfund/src/instructions/: claim_campaign.rs  mod.rs  new_campaign.rs  new_contribution.rs  remove_contribution.rs  update_campaign_uri.rs
solfund/programs/solfund/src/states/: campaign.rs  contribution.rs  milestone.rs  mod.rs
solfund/tests/: solfund.ts
(+1 files in other folders)
