[package]
name = "solfund"
version = "1.0.0"
description = "Crowd funding app for solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solfund"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
